[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Index.gd" type="Script" id=1]
[ext_resource path="res://DefaultFont.tres" type="FontFile" id=2]
[ext_resource path="res://AudioPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="FontFile" id=1]
font_path = "res://Raleway-Black.ttf"

[sub_resource type="FontFile" id=2]
size = 20
font_data = SubResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftPanel" type="Panel" parent="."]
offset_right = 350.0
offset_bottom = 540.0

[node name="ItemList" type="ItemList" parent="LeftPanel"]
offset_right = 350.0
offset_bottom = 540.0
theme_override_fonts/font = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
offset_left = 350.0
offset_right = 960.0
offset_bottom = 540.0

[node name="StatusLabel" type="Label" parent="Panel"]
offset_right = 610.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource( 2 )
text = "Loading list of audios from server ...
"
autowrap = true

[node name="AudioPlayer" parent="Panel" instance=ExtResource( 3 )]
offset_top = 270.0
offset_right = 610.0
offset_bottom = 540.0
[connection signal="item_selected" from="LeftPanel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="LeftPanel/ItemList" to="." method="_on_ItemList_nothing_selected"]
